<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GPSLocation</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="gpslocation"/>
    <string name="address">Address : </string>
    <string name="submit">Submit</string>
    <string name="latitude">Latitude</string>
    <string name="longtitude">Longtitude</string>
    <string name="blank"></string>

</resources>
